# nostrust

./: Cargo.toml  README.md
src/: cli.rs  encryption.rs  env.rs  event.rs  key.rs  lib.rs  main.rs  message.rs  mnemonic.rs  request.rs  signature.rs  time.rs
src/bech32/: event.rs  mod.rs  nevent.rs  nprofile.rs  npub.rs  nsec.rs  profile.rs
src/cli/: mod.rs
