[package]
name = "nostrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.2"
base64 = "0.21.0"
bech32 = "0.9.1"
cbc = { version = "0.1.2", features = ["block-padding", "alloc"]}
clap = { version = "4.1.4", features = ["derive"] }
hex = "0.4.3"
secp256k1 = {version = "0.26.0", features = ["std", "rand-std", "global-context", "bitcoin-hashes-std", "serde"]}
serde = { version = "1.0.152", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0"
thiserror = "1.0.38"
